adding more questions for functional interface

--- a/templates/functional-interface-reviewer-answers.properties
+++ b/templates/functional-interface-reviewer-answers.properties
@@ -71,9 +71,13 @@
 11-1=Create a hasTheSameCategory which accepts two books and returns true if both books has same category
     BiPredicate<Book, Book> hasTheSameCategory = (b1, b2) -> b1.getCategory().equalsIgnoreCase(b2.getCategory());
     System.out.println(String.format("%s and %s has the same category: %s", books.get(0).getTitle(), books.get(2).getTitle(), hasTheSameCategory.test(books.get(0), books.get(2))));
-
-
-
+12-1=Create a Functional Interface Random10Generator which has a generateRandom10 method which accepts no parameter and return a random number from 1 - 10
+    Random rnd = new Random();
+    Random10Generator random10Generator = () -> rnd.nextInt(11);
+    System.out.println(random10Generator.generateRandom10());
+12-2=Create a Functional Interface name Greeting which has a greet method which accepts a String parameter and return a String "Hello <parameter>"
+    Greeting greeting = (s) -> "Hello " + s;
+    System.out.println(greeting.greet("Banana"));
 
 
 
