--- a/templates/functional-interface-reviewer.properties
+++ b/templates/functional-interface-reviewer.properties
@@ -20,3 +20,5 @@
 10-1=Create an doesBookContainEvenNumberOfPages which accepts a Book and returns true if the number of pages is even.
 10-1=Create an doesBookContainOddNumberOfPages which accepts a Book and returns true if the number of pages is odd.
 11-1=Create a hasTheSameCategory which accepts two books and returns true if both books has same category
+12-1=Create a Functional Interface Random10Generator which has a generateRandom10 method which accepts no parameter and return a random number from 1 - 10
+12-2=Create a Functional Interface name Greeting which has a greet method which accepts a String parameter and return a String "Hello <parameter>"
